@@ -1,5 +1,6 @@
 jalv (1.6.9) unstable; urgency=medium
 
+  * Add AppStream metainfo file
   * Add Qt6 version
   * Add missing short versions of command line options
   * Add option to install tool man pages
@@ -25,7 +26,7 @@ jalv (1.6.9) unstable; urgency=medium
   * Use fewer platform-specific APIs
   * Use portable zix filesystem API
 
- -- David Robillard <d@drobilla.net>  Wed, 30 Jul 2025 22:24:45 +0000
+ -- David Robillard <d@drobilla.net>  Thu, 31 Jul 2025 14:36:03 +0000
 
 jalv (1.6.8) stable; urgency=medium
 
